Bugfix - mate-settings-daemon/mate-settings-client.h: No such file or directory (http://aur.archlinux.org/packages.php?ID=49890)

--- a/mate-settings-daemon/mate-settings-daemon/Makefile.am
+++ b/mate-settings-daemon/mate-settings-daemon/Makefile.am
@@ -50,7 +50,7 @@ BUILT_SOURCES = 			\
 	mate-settings-client.h		\
 	$(NULL)
 
-apidir   = $(includedir)/mate-settings-daemon/mate-settings-daemon
+apidir   = $(includedir)/mate-settings-daemon
 api_DATA = 				\
 	mate-settings-client.h		\
 	mate-settings-plugin.h
