--- a/libmatecanvas/libmatecanvas-zip.in
+++ b/libmatecanvas/libmatecanvas-zip.in
@@ -11,7 +11,7 @@ rm $ZIP
 
 zip $ZIP -@ <<EOF
 bin/libmatecanvas-2-@LIBMATECANVAS_CURRENT_MINUS_AGE@.dll
-lib/libglade/2.0/libcanvas.dll
+lib/libglade/2.0/libgladematecanvas.dll
 EOF
 
 if [ -f share/locale/de/LC_MESSAGES/libmatecanvas-2.0.mo ]; then
@@ -23,7 +23,7 @@ fi
 rm $DEVZIP
 zip -r $DEVZIP -@ <<EOF
 lib/libmatecanvas-2.dll.a
-lib/libglade/2.0/libcanvas.dll.a
+lib/libglade/2.0/libgladematecanvas.dll.a
 lib/pkgconfig/libmatecanvas-2.0.pc
 include/libmatecanvas-2.0
 share/gtk-doc/html/libmatecanvas
