--- a/distro/archlinux/mate-extract/PKGBUILD
+++ b/distro/archlinux/mate-extract/PKGBUILD
@@ -1,23 +1,22 @@
 # Maintainer: Spyros Stathopoulos <foucault.online@gmail.com>
 # Contributor: Alessio Sergi <asergi at archlinux dot us>
 pkgname=mate-extract
-_pkgname=file-roller
 pkgver=0.0.0
-pkgrel=1
+pkgrel=3
 pkgdesc="Archive manipulator for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
 depends=('desktop-file-utils' 'mate-conf' 'hicolor-icon-theme')
 makedepends=('mate-doc-utils' 'intltool')
 conflicts=('file-roller' 'file-roller2')
-optdepends=('unrar: for RAR uncompression' 
+optdepends=('unrar: for RAR uncompression'
 'zip: for ZIP archives' 'unzip: for ZIP archives'
 'p7zip: 7zip compression utility' 'arj: for ARJ archives'
 'unace: extraction tool for the proprietary ace archive format')
 options=('!libtool' '!emptydirs')
 install='file-roller.install'
 url="http://matsusoft.com.ar/projects"
-groups=('mate')
+groups=('mate-extras')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 md5sums=('a6e050a104271029157b06578e9d1334')
 
@@ -27,7 +26,7 @@ build() {
 	mate-doc-prepare --force
 	autoreconf -i
 	aclocal
-	
+
 	./configure --prefix=/usr \
 		--disable-static \
 		--localstatedir=/var \
@@ -43,7 +42,7 @@ package() {
 	cd "$srcdir/$pkgname"
 	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="$pkgdir/" install
 	install -d -m755 "${pkgdir}/usr/share/mateconf/schemas"
-	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/*.schemas" --domain "${pkgname}" "${pkgdir}/etc/mateconf/schemas/"*.schemas
+	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} "${pkgdir}/etc/mateconf/schemas/"*.schemas
 	rm -f "${pkgdir}/etc/mateconf/schemas/"*.schemas
 }
 
