--- a/distro/archlinux/mate-file-manager-open-terminal/PKGBUILD
+++ b/distro/archlinux/mate-file-manager-open-terminal/PKGBUILD
@@ -1,20 +1,22 @@
 pkgname=mate-file-manager-open-terminal
 pkgver=0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="An extension for opening terminals in arbitrary local paths"
 arch=('i686' 'x86_64')
 url="http://manny.cluecoder.org/packages/nautilus-open-terminal"
 license=('GPL')
 depends=('mate-file-manager')
 makedepends=('pkgconfig' 'intltool')
+install=mate-file-manager-open-terminal.install
 options=('!libtool')
+group=('mate-extras')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('3041ce4d09d35a88cb3e744e26eb06f5ed09521b5d04619ac35a357d8b41f30d')
 
 build() {
 	cd "$srcdir/$pkgname"
-	
-	./configure --prefix=/usr
+
+	./configure --prefix=/usr || return 1
 
 	#fix non-standard directory
 	sed -i 's|${prefix}/etc|/etc|' Makefile
@@ -24,5 +26,10 @@ build() {
 
 package() {
 	cd "$srcdir/$pkgname"
-	make DESTDIR="$pkgdir" install
+	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="$pkgdir" install || return 1
+
+	install -m755 -d ${pkgdir}/usr/share/mateconf/schemas
+
+	mateconf-merge-schema ${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas || return 1
+	rm -f ${pkgdir}/etc/mateconf/schemas/*.schemas
 }
