--- a/distro/archlinux/libmatecomponent/PKGBUILD
+++ b/distro/archlinux/libmatecomponent/PKGBUILD
@@ -1,11 +1,12 @@
 pkgname=libmatecomponent
 pkgver=0.0.0
-pkgrel=3
+pkgrel=4
 pkgdesc="A set of language and system independant CORBA interfaces for creating reusable components"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
 depends=('mate-corba' 'libxml2' 'glib2')
 makedepends=('intltool' 'pkgconfig' 'flex')
+groups=('mate')
 options=()
 backup=('etc/matecomponent-activation/matecomponent-activation-config.xml')
 url="http://www.gnome.org"
