--- a/distro/archlinux/libmatecomponentui/PKGBUILD
+++ b/distro/archlinux/libmatecomponentui/PKGBUILD
@@ -1,11 +1,12 @@
 pkgname=libmatecomponentui
 pkgver=0.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="User Interface library for MateComponent"
 arch=('i686' 'x86_64')
 license=('GPL' 'LGPL')
 depends=('libmatecanvas' 'libmate')
 makedepends=('intltool' 'pkgconfig')
+groups=('mate')
 options=('!emptydirs')
 url="http://matsusoft.com.ar/projects"
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
@@ -20,7 +21,7 @@ build() {
 
 package() {
 	cd "${srcdir}/${pkgname}"
-	
+
 	make DESTDIR="${pkgdir}" install
 	rm -f "${pkgdir}/usr/share/applications/matecomponent-browser.desktop"
 }
