--- a/distro/archlinux/mate-desktop-environment/PKGBUILD
+++ b/distro/archlinux/mate-desktop-environment/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-desktop-environment
 pkgver=0.0.0
-pkgrel=12
+pkgrel=13
 pkgdesc="MATE Desktop Environment"
 arch=('any')
 license=('EULA')
@@ -52,6 +52,8 @@ depends=('mate-corba'
 
 optdepends=('mate-extract: Archive manager'
 'mate-applets: A collection of applets for MATE panel'
+'mate-document-viewer: A documents viewer for MATE'
+'mate-image-viewer: An image viewer for MATE'
 'mate-terminal: A terminal emulator for MATE')
 
 url="http://matsusoft.com.ar/projects"
