--- a/distro/archlinux/mate-pl-parser/PKGBUILD
+++ b/distro/archlinux/mate-pl-parser/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-pl-parser
 pkgver=0.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Totem playlist parser library"
 arch=(i686 x86_64)
 license=('LGPL')
@@ -8,7 +8,7 @@ depends=('gmime' 'libsoup-gnome')
 makedepends=('intltool' 'pkgconfig' 'gobject-introspection')
 options=('!emptydirs')
 url="http://matsusoft.com.ar/projects"
-groups=('mate')
+groups=('mate-extras')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('e3bbf2a4931ea6cda6fbe089eeda3d9f0a1de3a63eb93314c03bab39a935ca45')
 
