--- a/distro/archlinux/python-caja-terminal/PKGBUILD
+++ b/distro/archlinux/python-caja-terminal/PKGBUILD
@@ -5,6 +5,7 @@ pkgdesc="An integrated terminal for Mate File Manager"
 arch=('any')
 url="http://software.flogisoft.com/nautilus-terminal/"
 license=('GPL')
+groups=('mate-extras')
 depends=('python-caja' 'vte' 'pyxdg')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('36224a8d21089650ea051e8215b30eb0ec090c5b6d08d85e5bbfd9d84bca2832')
