--- a/distro/archlinux/python-caja/PKGBUILD
+++ b/distro/archlinux/python-caja/PKGBUILD
@@ -5,6 +5,7 @@ pkgdesc="Python binding for Cahja components"
 arch=('i686' 'x86_64')
 url="http://matsusoft.com.ar/projects/"
 license="GPL"
+groups=('mate-extras')
 makedepends=('pkgconfig' 'python-mate' )
 depends=('mate-file-manager' 'pygtk')
 options=('!libtool' '!emptydirs')
@@ -22,6 +23,6 @@ build() {
 
 package() {
 	cd "${srcdir}/${pkgname}"
-	
+
 	make DESTDIR="$pkgdir" install || return 1
 }
