--- a/distro/archlinux/libmatecanvas/PKGBUILD
+++ b/distro/archlinux/libmatecanvas/PKGBUILD
@@ -1,11 +1,12 @@
 pkgname=libmatecanvas
 pkgver=0.0.0
-pkgrel=5
+pkgrel=6
 pkgdesc="The MATE Canvas library"
 arch=(i686 x86_64)
 license=('LGPL')
 depends=('libglade' 'libart-lgpl')
 makedepends=('pkgconfig' 'intltool')
+groups=('mate')
 url="http://matsusoft.com.ar/projects"
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('c83bcecb34409b6d733af0f2fdbf2590912bdc7e6112110805d7753650cbb2f0')
