--- a/distro/archlinux/mate-applets/PKGBUILD
+++ b/distro/archlinux/mate-applets/PKGBUILD
@@ -1,15 +1,15 @@
 pkgname=mate-applets
 pkgver=0.0.0
-pkgrel=4
+pkgrel=5
 pkgdesc="MATE Applets"
 arch=(i686 x86_64)
 license=('GPL')
 depends=('gstreamer0.10-base-plugins' 'mate-panel' 'mate-character-map' 'libgtop' 'libmatenotify' 'cpufrequtils')
-makedepends=('mate-doc-utils' 'pkgconfig' 'mate-settings-daemon' 'intltool' 'mate-icon-theme' 'networkmanager') # 'mate-python-desktop' 
+makedepends=('mate-doc-utils' 'pkgconfig' 'mate-settings-daemon' 'intltool' 'mate-icon-theme' 'networkmanager') # 'mate-python-desktop'
+groups=('mate-extras')
 options=(!emptydirs)
 url="http://matsusoft.com.ar/projects"
 install=mate-applets.install
-groups=('mate')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('ddd7fed9b3b1c947e45f967ccfb56adcd2a104809d6f67aaffe81a23ec075894')
 
@@ -32,7 +32,7 @@ build() {
 
 package() {
 	cd "${srcdir}/${pkgname}"
-	
+
 	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 	#rm -f ${pkgdir}/usr/lib/*.la # can be used options=(!libtools)
 
