--- a/distro/archlinux/mate-bluetooth/PKGBUILD
+++ b/distro/archlinux/mate-bluetooth/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-bluetooth
 pkgver=0.0.0
-pkgrel=1
+pkgrel=3
 pkgdesc="A collection of Bluetooth utilities and modules for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -9,7 +9,7 @@ makedepends=('intltool' 'pygtk' 'mate-doc-utils' 'mate-file-manager-sendto' 'gob
 options=('!emptydirs')
 install=mate-bluetooth.install
 url="http://matsusoft.com.ar/projects"
-groups=('mate')
+groups=('mate-extras')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('9a6241439ad3ba34d8288bb5ae2c2cc61b4ad3530c61fe5f8a6a6085f2d79754')
 
