--- a/distro/archlinux/mate-file-manager-sendto/PKGBUILD
+++ b/distro/archlinux/mate-file-manager-sendto/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-file-manager-sendto
 pkgver=0.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Context menu for sending files on MATE File Manager"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -9,7 +9,7 @@ makedepends=('pidgin' 'gajim' 'gettext' 'intltool')
 options=('!emptydirs')
 install=mate-file-manager-sendto.install
 url="http://matsusoft.com.ar/projects"
-groups=('mate-extra')
+groups=('mate-extras')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('3c227aaee61f6fed72c54ac2550714fbbc2a57cd6fb7034a338f60111083b9e0')
 
