--- a/distro/archlinux/mate-image-viewer/PKGBUILD
+++ b/distro/archlinux/mate-image-viewer/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-image-viewer
 pkgver=0.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="An image viewing and cataloging program for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -9,23 +9,23 @@ makedepends=('pkgconfig' 'mate-doc-utils' 'intltool')
 options=('!emptydirs' '!libtool')
 conflicts=('eog')
 url="http://matsusoft.com.ar/projects"
-groups=('mate')
+groups=('mate-extras')
 install=mate-image-viewer.install
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('46130b2508f495d2ef1241e9819eb7db5b94b00b1c2341aa04bfe1292f14e9c3')
 
 build() {
 	cd "${srcdir}/${pkgname}"
-	
+
 	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-scrollkeeper || return 1
-	
+
 	make || return 1
 }
 
 package() {
     cd "${srcdir}/${pkgname}"
-    
+
 	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
 	install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
