--- a/distro/archlinux/mate-terminal/PKGBUILD
+++ b/distro/archlinux/mate-terminal/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-terminal
 pkgver=0.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="The MATE Terminal Emulator"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -9,7 +9,7 @@ makedepends=('pkgconfig' 'mate-doc-utils' 'intltool')
 options=('!emptydirs')
 install=mate-terminal.install
 url="http://matsusoft.com.ar/projects"
-groups=('mate')
+groups=('mate-extras')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('52c8b82aa649c60124f0a4f5e7d7c4d1919909512bb415454ada4de9785e27a4')
 
@@ -22,7 +22,7 @@ build() {
 
 package() {
     cd "$srcdir/$pkgname"
-    
+
 	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
 	install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
