--- a/distro/archlinux/mate-text-editor/PKGBUILD
+++ b/distro/archlinux/mate-text-editor/PKGBUILD
@@ -11,28 +11,29 @@ makedepends=('pkgconfig' 'mate-doc-utils' 'intltool')
 options=('!emptydirs' '!libtool')
 conflicts=('gedit')
 url="http://matsusoft.com.ar/projects"
-groups=('mate')
+groups=('mate-extras')
 install=mate-text-editor.install
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('1bf55b68894bbb944769f6a9371d8675fb42f7cbc02947ba7a22321022ec5ae6')
 
 build() {
-        cd "${srcdir}/${pkgname}"
-        intltoolize --force --copy --automake || die "intltoolize failed"
+	cd "${srcdir}/${pkgname}"
+	intltoolize --force --copy --automake || die "intltoolize failed"
 
-        PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
-                --localstatedir=/var --libexecdir=/usr/lib/ --disable-scrollkeeper --enable-python || return 1
-        make || return 1
+	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
+		--localstatedir=/var --libexecdir=/usr/lib/ \
+		--disable-scrollkeeper --enable-python || return 1
+	make || return 1
 
 }
 
 package() {
-    cd "${srcdir}/${pkgname}"
+	cd "${srcdir}/${pkgname}"
 
-        make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
+	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
-        install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
-        mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.sc$
-        rm -f ${pkgdir}/etc/mateconf/schemas/*.schemas
+	install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
+	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.sc$
+	rm -f ${pkgdir}/etc/mateconf/schemas/*.schemas
 }
 
