--- a/distro/archlinux/mate-themes/PKGBUILD
+++ b/distro/archlinux/mate-themes/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-themes
 pkgver=0.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Default themes for the MATE desktop"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -11,11 +11,11 @@ conflicts=('gnome-themes')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('10a3e26d5d75b4e68c85eba0f22917f108ae1155904841601f8e9bb0f4156843')
+sha256sums=('bb9293a79a1223a83512b34fd571264d9aa4b455a6cd044d5d347c57ced70b7d')
 
 build() {
 	cd "${srcdir}/${pkgname}"
-	./configure --prefix=/usr || return 1
+	./configure --prefix=/usr --enable-all-themes || return 1
 	make || return 1
 }
 
