--- a/distro/archlinux/mate-user-docs/PKGBUILD
+++ b/distro/archlinux/mate-user-docs/PKGBUILD
@@ -1,13 +1,13 @@
 pkgname=mate-user-docs
 pkgver=0.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="User documentation for MATE"
 arch=('any')
 license=('FDL')
 depends=()
 makedepends=('mate-doc-utils')
 url="http://matsusoft.com.ar/projects"
-groups=('mate')
+groups=('mate-extras')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('92314ac57e4e5813f4f0885dcbec3ea6dbd5028707f922bbea7cf5a8f6118256')
 
