--- a/distro/archlinux/mate-video-player/PKGBUILD
+++ b/distro/archlinux/mate-video-player/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-video-player
 pkgver=0.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="A MATE integrated movie player based on Gstreamer."
 arch=(i686 x86_64)
 license=('GPL')
@@ -9,7 +9,7 @@ makedepends=('intltool' 'pkgconfig' 'mate-doc-utils')
 options=('!emptydirs')
 install=mate-video-player.install
 url="http://matsusoft.com.ar/projects"
-groups=('mate')
+groups=('mate-extras')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('beb47137c3495031a9fb25a42a3dfd9bc3f937946f3ab3d653c1938a7db597bf')
 
@@ -18,13 +18,15 @@ build() {
 
 	./configure --prefix=/usr --sysconfdir=/etc \
 		--libexecdir=/usr/lib/${pkgname} \
-		--localstatedir=/var --disable-static
-	make
+		--localstatedir=/var --disable-static || return 1
+
+	make || return 1
 }
 
 package() {
 	cd "${srcdir}/${pkgname}"
-	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install
+
+	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
 	install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
 	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas
