--- a/distro/archlinux/mate-window-manager/PKGBUILD
+++ b/distro/archlinux/mate-window-manager/PKGBUILD
@@ -1,10 +1,10 @@
 pkgname=mate-window-manager
 pkgver=0.0.0
-pkgrel=2
+pkgrel=5
 pkgdesc="A window manager for MATE"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('startup-notification' 'mate-conf' 'mate-dialogs' 'libcanberra' 'libgtop' 'libwnck')
+depends=('mate-conf' 'mate-dialogs' 'libgtop' 'libwnck') #  'libcanberra' 'startup-notification'
 makedepends=('intltool' 'pkgconfig' 'mate-doc-utils')
 options=('!emptydirs')
 install=mate-window-manager.install
@@ -17,16 +17,17 @@ sha256sums=('1b7aa5ac2cf58f35bbb7fca5a4bbe952754c6ba6b00b86b7cf92cf20de304ace'
 
 build() {
 	cd "${srcdir}/${pkgname}"
-	patch -Np1 -i "${srcdir}/metacity-restartstyle.patch"
-	./configure --prefix=/usr --sysconfdir=/etc \
-		--libexecdir=/usr/lib/${pkgname} \
-		--localstatedir=/var --disable-static
-	make
+	patch -Np1 -i "${srcdir}/metacity-restartstyle.patch" || return 1
+	./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
+		--libexecdir=/usr/lib/${pkgname} --disable-static \
+		--disable-startup-notification  --disable-scrollkeeper || return 1
+	make || return 1
 }
 
 package() {
 	cd "${srcdir}/${pkgname}"
-	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install
+
+	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
 	install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
 	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas
