--- a/distro/archlinux/python-corba/PKGBUILD
+++ b/distro/archlinux/python-corba/PKGBUILD
@@ -8,6 +8,7 @@ license="GPL"
 depends=('python2' 'mate-corba')
 makedepends=('pkgconfig')
 options=('!emptydirs')
+groups=('mate-extras')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('92d279144ff93e731a34a3ed0ccb23aa9f90f5ce2e1fa68692e9780ab748c319')
 
@@ -22,6 +23,6 @@ build() {
 
 package() {
 	cd "${srcdir}/${pkgname}"
-	
+
 	make DESTDIR="$pkgdir" install || return 1
 }
