--- a/distro/archlinux/python-mate/PKGBUILD
+++ b/distro/archlinux/python-mate/PKGBUILD
@@ -8,6 +8,7 @@ license="GPL"
 depends=('python2' 'python-corba' 'libmate' 'libmateui' 'libmatecanvas' 'libmatecomponent' 'mate-conf' 'mate-vfs' 'libmatecomponentui')
 makedepends=('pkgconfig')
 options=('!emptydirs')
+groups=('mate-extras')
 source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
 sha256sums=('34b25d2908b5f8131a45d86114b7eca4f0c15361473908c8a7c3122120d3c602')
 
@@ -32,6 +33,6 @@ build() {
 
 package() {
 	cd "${srcdir}/${pkgname}"
-	
+
 	make DESTDIR="$pkgdir" install || return 1
 }
