--- a/libmatecomponent/libmatecomponent-zip.in
+++ b/libmatecomponent/libmatecomponent-zip.in
@@ -34,7 +34,7 @@ fi
 rm $DEVZIP
 zip -r $DEVZIP -@ <<EOF
 bin/matecomponent-activation-run-query.exe
-bin/echo-client-2.exe
+bin/matecomponent-echo-client-2.exe
 include/matecomponent-activation-2.0
 include/libmatecomponent-2.0
 lib/matecomponent-2.0/samples/matecomponent-echo-2.exe
