--- a/libmate/schemas/desktop_mate_background.schemas.in.in
+++ b/libmate/schemas/desktop_mate_background.schemas.in.in
@@ -29,7 +29,7 @@
         <applyto>/desktop/mate/background/picture_filename</applyto>
         <owner>mate</owner>
         <type>string</type>
-	<default>@datadir@/pixmaps/backgrounds/mate/background-default.jpg</default>
+	<default>@datadir@/pixmaps/backgrounds/mate/abstract/stripes.jpg</default>
         <locale name="C">
         <short>Picture Filename</short>
         <long>File to use for the background image.</long>
@@ -51,7 +51,7 @@
         <applyto>/desktop/mate/background/primary_color</applyto>
         <owner>mate</owner>
         <type>string</type>
-        <default>#66ba00</default>
+        <default>#335592</default>
         <locale name="C">
         <short>Primary Color</short>
         <long>Left or Top color when drawing gradients, or the solid color.</long>
@@ -62,7 +62,7 @@
         <applyto>/desktop/mate/background/secondary_color</applyto>
         <owner>mate</owner>
         <type>string</type>
-        <default>#66ba00</default>
+        <default>#4367A5</default>
         <locale name="C">
         <short>Secondary Color</short>
         <long>Right or Bottom color when drawing gradients, not used for solid color.</long>
