--- a/libmate/mate-data/Makefile.am
+++ b/libmate/mate-data/Makefile.am
@@ -8,11 +8,6 @@ soundlist_DATA = $(soundlist_in_files:.soundlist.in=.soundlist)
 
 man_MANS = mate-options.7
 
-backgrounddir = $(datadir)/pixmaps/backgrounds/mate
-
-background_DATA = \
-	background-default.jpg
-
 metadata_in_files = mate-default.xml.in
 metadatadir = $(datadir)/mate-background-properties
 metadata_DATA = $(metadata_in_files:.xml.in=.xml)
@@ -27,4 +22,4 @@ mate-default.xml.in: mate-default.xml.in.in Makefile
 noinst_DATA = mate-default.xml.in
 CLEANFILES = $(soundlist_DATA) mate-default.xml mate-default.xml.in
 
-EXTRA_DIST = $(soundlist_in_files) $(soundlist_DATA) $(man_MANS) $(background_DATA) mate-default.xml.in.in
+EXTRA_DIST = $(soundlist_in_files) $(soundlist_DATA) $(man_MANS) mate-default.xml.in.in
