--- a/libmate/mate-data/Makefile.in
+++ b/libmate/mate-data/Makefile.in
@@ -246,8 +246,8 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 soundlistdir = $(sysconfdir)/sound/events
 soundlist_in_files = \
-	mate-2.soundlist.in		\
-	gtk-events-2.soundlist.in
+	mate.soundlist.in		\
+	gtk2-events.soundlist.in
 
 soundlist_DATA = $(soundlist_in_files:.soundlist.in=.soundlist)
 man_MANS = mate-options.7
