--- a/libmate/libmate-zip.in
+++ b/libmate/libmate-zip.in
@@ -27,8 +27,8 @@ etc/mateconf/schemas/desktop_mate_peripherals_keyboard.schemas
 etc/mateconf/schemas/desktop_mate_sound.schemas
 etc/mateconf/schemas/desktop_mate_thumbnailers.schemas
 etc/mateconf/schemas/desktop_mate_typing_break.schemas
-etc/sound/events/mate-2.soundlist
-etc/sound/events/gtk-events-2.soundlist
+etc/sound/events/mate.soundlist
+etc/sound/events/gtk2-events.soundlist
 lib/matecomponent/monikers/libmoniker_extra_2.dll
 lib/matecomponent/servers/MATE_Moniker_std.server
 EOF
